add working code for input city text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class = "grid">
     <header class=header>
         <h1>Weather Report</h1>
-        <p id="city-header">For the lovely city of Okaytown!</p>
+        <p id="city-header">Welcome to Okaytown!</p>
     </header>
     <nav class="nav">
         <ul class="ul-container">
@@ -30,7 +30,12 @@
             </li>
             <li id="city" class="deets">
                 <h2 class="text">City</h2>
-                <input type="text" id="city-input">
+                <div id = "city-div">
+                    <input type="text" id="city-input">
+                </div>
+                <div id = "city-div">
+                    <button id = "city-reset">RESET</button>
+                </div>
             </li>
         </ul>
     </nav>
