--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
             <p>Weather Garden Display.</p>
         </section>
     </main>
-    <script src="scripts/index.js"></script>    
+    <script src="src/index.js"></script>    
 </body>
 </html>
