finally got buttons to work

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <section>
         <article id="temp">
             <h3>Temperature degC</h3>
-            <p id='temp_const'>19</p>
+            <p id='temp_const'> 19 </p>
             <button id="lower_temp"> &#x2796; </button>
             <button id="higher_temp"> &#x2795; </button>
         </article>
@@ -36,12 +36,12 @@
             </label>
         </article>
         <div class="result"></div>
-        <article id="city">
+        <article>
             <h3>City Name</h3>
             <label for="city">City Name:</label>
-
-<input type="text" id="city" name="city" required
-       minlength="4" maxlength="8" size="10">
+            <input type="text" id="city" name="city" required minlength="4" maxlength="8" size="10">
+            <div><button>Submit</button></div>
+            <div class="city_result"></div>
         </article>
       </section>
       <footer>
