--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <section>
         <h1>☀️SoCal Weather🌬 Report🌦</h1>
     </section>
+
     <section>
         <select name="locations" id="locations">
             <optgroup label="SoCal Locations">
@@ -18,16 +19,18 @@
             </optgroup>
         </select>
     </section>
-    <section id="temperature">
-        <h2>temperature</h2>
-        <p id="degreesFahrenheit">72°</p>
+
+    <section>
+        <h2>temperature: <span id="degrees">72</span></h2>
         <button id="colderButton">colder</button>
         <button id="niceDayButton">nice day</button>
         <button id="hotterButton">hotter</button>
     </section>
-    <section id="landscape">
+
+    <section>
         <h2>put landscape here</h2>
     </section>
-    
+
+    <script src="src/index.js"></script>
 </body>
 </html>
