changed default landscape to match default temp

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="weather-garden-block">
             <h2>Weather Garden</h2>
             <h4 id="sky-landscape">🌧⛈🌧</h4>
-            <h4 id="ground-landscape">🌲🌳🌻</h4>
+            <h4 id="ground-landscape">🌷🌳🌱</h4>
         </section>
 
         <script src="src/index.js"></script>
