--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </header>
       <section>
         <article id="temp">
-            <h3>Temperature degC</h3>
+            <h3>Temperature (°C)</h3>
             <p id='temp_const'> 19 </p>
             <button id="lower_temp"> &#x2796; </button>
             <button id="higher_temp"> &#x2795; </button>
@@ -40,8 +40,8 @@
             <h3>City Name</h3>
             <label for="city">City Name:</label>
             <input type="text" id="city" name="city" required minlength="4" maxlength="8" size="10">
-            <div><button>Submit</button></div>
-            <div class="city_result"></div>
+            <div><button id='cityButton'>Submit</button></div>
+            <div id="city_result"></div>
         </article>
       </section>
       <footer>
