change city name based on text input

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1><span id="city-name">Tacoma</span> Weather Report</h1>
+      <h1><span id="city-name"></span> Weather Report</h1>
     </header>
     <main>
       <div class="controls-container">
