run prettier for formatting

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/index.css" />
     <script defer src="src/index.js" type="text/javascript"></script>
     <title>Weather Report</title>
   </head>
@@ -35,7 +35,12 @@
         <section class="controls">
           <h2>City Name</h2>
           <label for="change-name">Type to Change the City's Name:</label>
-          <input type="text" name="change-name" id="change-name" value="Tacoma">
+          <input
+            type="text"
+            name="change-name"
+            id="change-name"
+            value="Tacoma"
+          />
           <button id="reset-name">Reset</button>
         </section>
       </div>
