got the celsius "+" button to work!

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="tempBlock">
         <h1>Temperature</h1>
         <section class="tempDisplays">
-            <h2 class="tempTitleText">Farhenheit</h2>
+            <h2 class="tempTitleText">Fahrenheit</h2>
             <section>
                 <button id="increaseTempFButton">+</button>
                 <section class="generalTemp">
@@ -40,11 +40,11 @@
         </section>
 
         <section class="tempDisplays">
-            <h2 class="tempTitleText">Celcius</h2>
+            <h2 class="tempTitleText">Celsius</h2>
             <section>
                 <button id="increaseTempCButton">+</button>
                 <section class="generalTemp">
-                    <h3 id="TempCContainer">0</h3>
+                    <h3 id="tempCContainer">0</h3>
                 </section>
                 <button id="decreaseTempCButton">-</button>
             </section>
