--- a/index.html
+++ b/index.html
@@ -7,22 +7,19 @@
     <link rel="stylesheet" href="styles/index.css">
     <title>Weather Report</title>
 </head>
-<body>
+<body class="container">
 <!-- weather heading -->
     <header>
-        <div>
-            <section>Weather Report</section> 
-            <section>For the lovely city of</section>
-            <section id="city-name">...</section>
-        </div>
+        <div>Weather Report</div> 
+        <div>For the lovely city of</div>
+        <div id="city-name">...</div>
     </header>
 <!-- weather garden -->
-    <main id="weather">
-        <p>Weather Garden</p>
-        <section id="weather-garden-container">
-            <div id="skyscape">skyscape</div>
-            <div id="landscape">landscape</div>
-        </section>
+    <main id="weather">Weather Garden
+        <!-- <section id="weather-garden-container"> -->
+        <div id="skyscape"></div>
+        <div id="landscape"></div>
+        <!-- </section> -->
         </div>
 
     </main>
@@ -35,7 +32,7 @@
         <button id="up-button">⬆️</button>
     </section>
 <!-- sky -->  
-    <section class="sky-box">
+    <section id="sky-box">
         <div class="sky-title">
             <p>Sky</p>
         </div>
@@ -48,7 +45,7 @@
         </select>
     </section>
 <!-- city -->  
-    <section class="city-box">
+    <section id="city-box">
         <div class="city-title">
             <p>City</p>
         </div>
