updated input funcationality to dynamically display text. created rand implemented reset button to reset text

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         The Weather Mage
     </header>
     <section>
-        <h1 id="city">
+        <h1>
+            Welcome to the beautiful 
+            <p id="city">
+                San Antonio
+            </p>
             <input type="text" id="typeCityName" value="San Antonio">
-            
             <button id="reset" type="reset">
                 Reset
             </button>
@@ -34,7 +37,7 @@
         <div id="weatherSky">
             <label>How is the weather today?</label>
             <select id="changeSky">
-                <option selected>Today the sky looks...</option>
+                <option id="plainSky" selected>Today the sky looks...</option>
                 <option id="clearSky">Clear as Can Be</option>
                 <option id="cloudySky">Skies of Gray</option>
                 <option id="rainySky">Drip. Drop. Drip.</option>
