--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     </section>    
 
     <section> 
-    <h3>City Name</h3> 
-    <input type="text">
-    <input type="reset" value="Reset">    
+        <h3>City Name</h3> 
+        <input type="text" id="city-name" name="name" required
+        minlength="4" maxlength="15" size="10">
+        <input type="reset" id ="reset" value="Reset">    
+        </section> 
     </section>    
 
     <section> 
