--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
     <link href="styles/index.css" rel="stylesheet" />
 </head>
 <body class="container">
-    <section id="title">
+    <section id="title" class="card">
         <h1 id="title-text" class="text">Weather Report</h1>
     </section>
-    <section id="sky-display">Placeholder: Image of a sky</section>
-    <section id="city-display">
+    <section id="sky-display" class="card">Placeholder: Image of a sky</section>
+    <section id="city-display" class="card">
         <h3 class="text">Coming to you live from</h3>
     </section>
-    <section id="city-input-block">
+    <section id="city-input-block" class="card">
         <h2 class="text">Where ya at?</h2>
     </section>
-    <section id="temperature-block">
-        <h2 class="text">Temperature</h2>
-        <button id="increase-temp">⬆️</button>
-        <button id="decrease-temp">⬇️</button>
+    <section id="temperature-block" class="card">
+        <h1 id="temperature-title" class="text">Temperature</h1>
+        <section id="temperature-interact" class="inner-card-container">
+            <button id="increase-temp">⬆️</button>
+            <p id="temperature-display" class="text">72°</p>
+            <button id="decrease-temp">⬇️</button>
+        </section>
     </section>
-    <section id="sky-select-block">
+    <section id="sky-select-block" class="card">
         <h2 class="text">Choose your sky:</h2>
     </section>
-    <section id="landscape-block">Placeholder: picture of a landscape</section>
+    <section id="landscape-block" class="card">Placeholder: picture of a landscape</section>
+    <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
