adds reset button to city-input-block element

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </section>
     <section id="city-input-block" class="card">
         <h2 class="text">Where ya at?</h2>
+        <button id="city-reset">Reset</button>
     </section>
     <section id="temperature-block" class="card">
         <h1 id="temperature-title" class="text">Temperature</h1>
