Addds rough basics of HTML elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <header> 
+        <h1 id="weather-header">Weather Report</h1>
+        <h2 id="city-header">For the city of <span id="city">city</span></h2>
+    </header>
+    <section class="temperature">
+        <h1>Temperature</h1>
+        <div id="up-button">↑</div>
+        <div id="down-button">↓</div>
+        <div id="temp-number"><span id="number">some int</span>° F</div>
+    </section>
+    <section class="sky">
+        <h1>Sky</h1>
+        <div id="sky-drop-down"></div>
+    </section>
+    <section class="city-name">
+        <h1>City Name</h1>
+        <div id="city-text-box"></div>
+        <div id="city-reset-button">Change City</div>
+    </section>
+    <section class="weather-garden">
+        <h1>Weather Garden</h1>
+        <div id="sky-garden"></div>
+        <div id="landscape-garden"></div>
+    </section>
 </body>
 </html>
