implements optional enhancement and deletes extra comments

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <main>
         <section>
             <h2>Temperature</h2>
-            <h3 id="temp">70</h3>
+            <h3 class="fahrenheit" id="temp">70 ºF</h3>
             <button id="increase-temp">Increase</button>
             <button id="decrease-temp">Decrease</button>
-            <button id="convert-temp">Convert</button>
+            <button id="convert-temp">Convert to Celsius</button>
         </section>
         <section>
             <h2>Sky</h2>
@@ -38,7 +38,7 @@
         </section>
         <section>
             <h2>Weather Garden</h2>
-            <div>
+            <div id='sky-background'>
                 <div id="sky">☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</div>
                 <div id="garden">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
             </div>
