--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 
             <!-- Emoji section-->
             <section class="emoji-section">
-                <div id="sky-container">Choose a sky option below</div>
-                <div id="produce-container">🍓🍆 🌽 🥭 🍒 🍉</div>
-                <div id="plant-container">Change the temperature to see changes in the emojis</div>
+                <div id="sky-container">Choose a sky option to see changes here</div>
+                <div id="produce-container">🍓🍆 🌲🍋🥂🌸🌿🍊🌰🌽 ☘️🌱🌻🌷🥭 🍒🎄 🍉</div>
+                <div id="plant-container">Change the temperature to see changes here</div>
             </section>
-            <script src="scripts/index.js" ></script>
         
             <!-- Temperature selection section -->
             <section class="temperature-section">
@@ -32,7 +31,7 @@
             </section>
             
             <!-- Sky drop-down section -->
-            <section class="sky-area">
+            <section class="sky-section">
                 <h3 id="sky-heading">Sky</h3>
                 <select id="drop-down">
                     <option>Choose one...</option>
@@ -45,7 +44,7 @@
             </section>
 
             <!-- City section -->
-            <section class="city-area">
+            <section class="city-section">
                 <h3 id="city-heading">City</h3>
                 <label for="city-search" id="city-search-label">Type in your city below</label>
                 <input type="text" id="city-search-input" value="Philadelphia" minlength="4" maxlength="20" size="10"/>
