cleaned up some alignment issues

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3>Temperature</h3>
             <section class="arrow" id="upArrow">⬆️</section>
             <section class="arrow" id="downArrow">⬇️</section>
-            <section id="temp">71</section>
+            <section id="temp">71 don't show this</section>
         </section>
         <section class="toggleBox" id="skyBox">
             <h3>Sky</h3>
@@ -29,13 +29,9 @@
             </select>
         </section>
         <section class="toggleBox" id="cityBox">
-            <section id="cityFirstHalfBox">
-                <h3>City</h3>
-                <input placeholder="Seattle"></input>
-            </section>
-            <section id="citySecondHalfBox">
-                <button id="resetButton">Reset</button>
-            </section>
+            <h3>City</h3>
+            <input placeholder="Seattle"></input>
+            <button id="resetButton">Reset</button>
         </section>
     </section>
     <section id="section3">
