add city heading that updates name with typing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </main>
     <section id = "playground">
         <div id= "landscape" class = "round Morning">
-            <div id= "landscape-text">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
+            <div id= "landscape-text">🌵__🐍_🦂_🌵🌵__🐍_🏜_🦂</div>
         </div>
     </section>
 
