refactored by combining increaseTemp and decreaseTemp into one function, adjustTemp

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="container">
     <section class="heading">
-        <h1>🌸 Weather Report For 🌸 </h1>
+        <h1>Weather Report For</h1>
         <h2 id= "cityDisplay">New York</h2>
     </section>
 
