Added jS functionality to city-name-section

--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
         <span>
             City:
             <span id="header-city-name" class="header-city-name"></span>
-            <!-- ::before -->
-            Salt Lake City
-            <!-- ::after -->
         </span>
     </header>
     <div class="temperature">
         <div class="degree-section">
         <p class="temperature-degree">34</p>
-        <span>F</span>
+        <span>ºF</span>
     </div>
         <button id="increase-temperature" type="button">▲</button>
         <button id="decrease-temperature" type="button">▽</button>
@@ -32,10 +29,10 @@
     <section class="sky-section">
         <h2>Sky</h2>
         <select id="sky-select">
-            <option>Sunny</option>
-            <option>Cloudy</option>
+            <option style="background-image:url(male.png);">Cloudy</option>
             <option>Rainy</option>
             <option>Snowy</option>
+            <option>Sunny</option>
         </select>
     </section>
     <section class="city-name-section">
