--- a/index.html
+++ b/index.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Report</title>
-    <link href="styles/index.css" rel="stylesheet" />
-</head>
-<body>
-    <section id="section1">
-        <h1>Weather report</h1>
-        <h2>for ✨Seattle✨</h2>
-    </section>
-    <section id="section2">
-        <section class="toggleBox" id="tempBox">
-            <h3>Temperature</h3>
-            <section class="arrow" id="upArrow">⬆️</section>
-            <section class="arrow" id="downArrow">⬇️</section>
-            <section id="temp">71 don't show this</section>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Weather Report</title>
+        <link href="styles/index.css" rel="stylesheet" />
+    </head>
+    <body>
+        <section id="section1">
+            <h1>Weather report</h1>
+            <h2>for ✨Seattle✨</h2>
         </section>
-        <section class="toggleBox" id="skyBox">
-            <h3>Sky</h3>
-            <select>
-                <option>Sunny</option>
-                <option>Cloudy</option>
-                <option>Rainy</option>
-                <option>Snowy</option>
-            </select>
+        <section id="section2">
+            <section class="toggleBox" id="tempBox">
+                <h3>Temperature</h3>
+                <section class="arrow" id="upArrow">⬆️</section>
+                <section class="arrow" id="downArrow">⬇️</section>
+                <section id="temp">71 don't show this</section>
+            </section>
+            <section class="toggleBox" id="skyBox">
+                <h3>Sky</h3>
+                <select>
+                    <option>Sunny</option>
+                    <option>Cloudy</option>
+                    <option>Rainy</option>
+                    <option>Snowy</option>
+                </select>
+            </section>
+            <section class="toggleBox" id="cityBox">
+                <h3>City</h3>
+                <input placeholder="Seattle"></input>
+                <button id="resetButton">Reset</button>
+            </section>
         </section>
-        <section class="toggleBox" id="cityBox">
-            <h3>City</h3>
-            <input placeholder="Seattle"></input>
-            <button id="resetButton">Reset</button>
+        <section id="section3">
+            <h4>Weather Garden</h4>
+            <section class="garden">
+                <p id="sky">Sky - Don't show this</p>
+                <p id="landscape">Landscape - don't show this</p>
+            </section>
         </section>
-    </section>
-    <section id="section3">
-        <h4>Weather Garden</h4>
-        <section id="garden">
-            <p id="sky">Sky - Don't show this</p>
-            <p id="landscape">Landscape - don't show this</p>
-        </section>
-    </section>
-    <script src="scripts/index.js" type="text/javascript"></script>
-</body>
+        <script src="scripts/index.js" type="text/javascript"></script>
+    </body>
 </html>
