add click functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="temp-box">
         <button id="up">Up</button>
-        <p id="temp">TBD</p>
+        <p id="temp">50</p>
         <button id="down">Down</button>
     </div>
     
@@ -30,5 +30,6 @@
         </form>
     <div id="emoji-scene">
     </div>
+    <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
