--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <section id="container">
       <header>
-        <h1>Weather Report</h1>
-        <h5 id="sub-header">Should you leave your house today? Or nah? 🤔</h2>
+        <h1 id='page-title'>Weather Report - 🌟 Sharjah 🌟</h1>
+        <h5 id="sub-header">Should you leave your house today? Or nah? 🤔</h5>
       </header>
       <section>
         <article id="temp">
