--- a/index.html
+++ b/index.html
@@ -5,8 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="boxes container">
+        <header class="box header">
+            <div class="header-text">
+                <h1>
+                    Weather Report
+                </h1>
+                <h2>For the beautiful city of 💕 <span id="headerCityName" class="header-city-name">Seattle</span> 💕</h2>
+            </div>
+        </header>
+        <section class="box sidebar">
+            <div class="box1 temp">
+                <p class="temp-select-text">Select Temperature:</p>
+                <div class="temp-selector">
+                    <button id="increaseTemp">ᐱ</button>
+                    <span id="TempBox">65</span>
+                    <span class="degree">°</span>
+                    <button id="decreaseTemp">ᐯ</button>
+                </div>
+            </div>
+            <div class="box2 sky">
+                <p>Select Sky</p>
+                <div>
+                    <select id="sky-select">
+                        <option value="Sunny">Sunny</option>
+                        <option value="Snowy">Snowy</option>
+                        <option value="Cloudy">Cloudy</option>
+                        <option value="Rainy">Rainy</option>
+                    </select>
+                </div>
+            </div>
+            <div class="box3 city">
+                <p class="enter-city">Enter City Name:</p>
+                <input id="city-name" type="text" placeholder="Seattle">
+            </div>
+        </section>
+        <main class="box main">
+            <h2 class="weather-title">Weather Garden</h2>
+            <div id="weather-garden">   
+                
+                <div id="allGardenContent" class="all-garden">
+                <div id="sky"></div>
+                <div id="plants"></div>
+            </div>
+        </main>
+    </section>
+    <script src="src/index.js"></script>
 </body>
 </html>
