fixes typos and adds elements to get js to work

--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
             <button id="cooler-button">
               <span> Colder </span>
               </section>
-            <span id="temp-value">32</span>
+            <span id="temp-value">42</span>
       </div>
 
     <!-- LANDSCAPE CONTAINER -->
       <div id="card" >
         <h2>The Weather Landscape</h2> 
-          <div id="sky-display">Sky: </div> 
-          <div id="garden-display">Garden: </div>
+          <div id="sky"> 
+            <p id="sky-image"></p>
+          </div> 
+          <div id="garden">
+            <p id="garden-image"></p> 
+        </div>
       </div>
 
     <!-- CITY CONTAINER -->
@@ -51,10 +55,10 @@
           <h2>Select a Sky</h2>
           <p>Use the drop-down menu to select the atmosphere.</p>
             <select id="dropdown-sky">
-              <option value="sky1">Snowy</option>
-              <option value="sky2">Cloudy</option>
-              <option value="sky3">Rainy</option>
-              <option value="sky4">Sunny</option>
+              <option value="Snowy">Powder Day</option>
+              <option value="Cloudy">Cloudy</option>
+              <option value="Rainy">Rainy</option>
+              <option value="Sunny">Sunny</option>
           </select>
       </div>
     </div>
