temp background changes color with changing tempNum, lanscape and sky change to match selector dropdown button

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <section id="titleGreeting">
         <h1>Weather Report  </h1>
         <h2> for the happy town of </h2>
-        <span id ="headerCityName"> ChewAndSwallow</span>
+        <span id ="headerCityName"> Chewandswallow</span>
     </section>
     <section id="changeCityName">
         <h1> Change City Name</h1>
         <button id="Reset">Reset</button>
         <input id="inputCityName" value="Your City Name" />
     </section>
-    <section id="tempAdjuster">
+    <section id="tempAdjuster" class="blue">
         <h1> Adjust Thermostat</h1>
-        <button id="arrowUp">Arrow Up⏫</button>
-        <button id="arrowDown">Arrow Down⏬</button>
+        <button id="arrowUp">Increase⏫</button>
+        <button id="arrowDown">Decrease⏬</button>
         <span id="tempNum"> </span>
     </section>
     
@@ -35,7 +35,7 @@
             <option>Sunny with a fall of fruit</option>
             <option>Cloudy with a chance of meatballs</option>
             <option>Raining cats and dogs</option>
-            <option>Snowy with a slough of sweets</option>
+            <option>Snowy with a spread of sweets</option>
     
         </select>
     </section>
