--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Weather Report</title>
     <link href="styles/index.css" rel="stylesheet"/>
 </head>
-
 <body>
     <header>
     <h1><span class=fancy>S</span>tress<span class=fancy> M</span>eter <span class=fancy>W</span>eather <span class=fancy>R</span>eport</h1>
@@ -16,23 +15,23 @@
             <h2>For the awesomely amazing student named <span id=student-name>Michelle</span></h2>  
             <section id=grid-container>
                 <section id="temperature-section">
-                <h2>Temperature - Pending Ada Assignments</h2>
-                <div id="arrows">
-                    <p id="increase-temp">⬆️</p>
-                    <p id="decrease-temp">⬇️</p>
-                </div>
-                <div id="temp-convert-container">
-                    <span id="temp-integer"></span>
+                <h2>Temperature<br>Pending Ada Assignments</h2>
+                <div id=temp-content>
+                    <div id="arrows">
+                        <p id="increase-temp"> &nbsp &nbsp ⬆️ </p>
+                        <span id="tempNum"></span>
+                        <p id="decrease-temp"> &nbsp &nbsp ⬇️ </p>
+                    </div>
                 </div>
                 </section>
-
-            <section id="garden-section">
-                <h2>Garden of the Soul</h2>
-                <div id="weather-content">
-                    <div id="landscape"></div>
-                    <div id="sky"></div>
-                </div>
-            </section>
+                <section id="garden-section">
+                    <h2>Garden of the Soul</h2>
+                    <div id="weather-content">
+                        <div id="sky"></div>
+                        <div id="landscape"></div>
+                        
+                    </div>
+                </section>
         </section> 
             <section class="bottom-sections">
                 <h2>Sky - Life @ home</h2>
@@ -41,8 +40,7 @@
                         <option value="Sunny">Sunny</option>
                         <option value="Cloudy">Cloudy</option>
                         <option value="Rainy">Rainy</option>
-                        <option value="ThunderStorms">ThunderStorms</option>
-                        <option value="Hurricane">Hurricane</option>
+                        <option value="Snowy">Snowy</option>
                     </select>
                 </div>
             </section>
@@ -55,6 +53,7 @@
             </section>
 
         </main>
+    
     <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
