--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <header>
-    <h1>Show Me The Weather</h1>
+    <h1 class="landscape">Show Me The Weather</h1>
   </header>
-  <body>
+  <body class="landscape">
     <img
       src="assets/sky_photo.jpg"
       alt="A photo of a cloudy sky"
       id="skyViews"
     />
-    <section class="pickerWindow">
-      <section>
-        <label>Temperature</label>
+    <section class="buttonWindow">
+      <section id="tempContainer">
+        <label id="tempCount">Temperature: 0</label>
         <div>
-          <button id="clickButtonIn">⬆️</button>
+          <button id="clickButtonIn" >⬆️</button>
           <button id="clickButtonDe">⬇️</button>
         </div>
       </section>
@@ -40,16 +40,19 @@
       <section>
         <label for="cityName">Enter a City</label>
         <div>
-          <input type="text" id="cityNameInput" />
+          <input type="text" id="cityNameSelect" />
           <button id="cityNameReset" class="cityName_resetBtn">Reset</button>
         </div>
       </section>
-    <div>
-      <!-- Weather Type Photo here -->
-    </div>
+    <section>
+      <!-- Landscape Photos here -->
+
+    </section>
+    <section>
     <div>
       <!-- Emojis go here -->
     </div>
+    </section>
     <div>
       <!-- City Element goes here -->
     </section>
