--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="result"></div>
         <article>
             <h3>City Name</h3>
-            <label for="city">City Name:</label>
-            <input type="text" id="city" name="city" required minlength="4" maxlength="8" size="10">
-            <div><button id='cityButton'>Submit</button></div>
+            <label for="city">Type and Press Enter:</label>
+            <input type="text" id="city" name="city" required minlength="4" maxlength="12" size="14">
+            <div><button id='resetButton'>Reset</button></div>
             <div id="city_result"></div>
         </article>
       </section>
