adds background image to landscape-block

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="sky-select-block" class="card">
         <h2 class="text">Choose your sky:</h2>
     </section>
-    <section id="landscape-block" class="card">Placeholder: picture of a landscape</section>
+    <section id="landscape-block" class="card"></section>
     <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
