Wave 5 complete, Reset button also clears text field

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <span class="city-header-welcome" ><h3 id="cityGreeting">Beautiful city of Nuevo San Juan Parangaricutiro!</h3></span>
         <input id="cityName" placeholder="City Name"></input>
         <button class="submit_btn" id="submit_city_name">Submit</button>
+        <button class="reset_btn" id="reset_city_name">Reset</button>
     </header>
 
     <div id="sky-temperature-container">
