--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <div id="temp-btns">
             <button id="increase-temp">+</button>
             <button id="decrease-temp">-</button>
+            <button id="convert-btn">To Celsius</button>
           </div>
         </section>
         <section class="controls">
