--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/index.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Rock+Salt&display=swap" rel="stylesheet">
     <title>Weather Check</title>
 </head>
 <body class="container">
     <h1 id="title">Weather Check</h1>
     <section class="label" id="temp-display-small">Temperature Selector:</section>
     <section id="temp-changer">
-        <button id="up">⬆</button>
-        <button id="down">⬇</button>
+        <button class="arrow-button" id="up">⬆</button>
+        <button class="arrow-button" id="down">⬇</button>
     </section>
     <section class="label" id="sky-type-text"> Select Sky Type Here:
         <select id="sky-type">
@@ -30,7 +33,7 @@
     <button id="reset-city">Reset</button>
     </section>
     <section id="sky-display">☀️☀️☀️☀️☀️☀️☀️☀️☀️☀️</section>
-    <section id="landscape-display">🌵🌵🌵🌵🌵🌵🌵🌵🌵🌵</section>
+    <section id="landscape-display">🌴🌴🌴🌴🌴🌴🌴🌴🌴🌴'</section>
     <section id="city-display">Your City Here</section>
     <section id="temp-display-big">76 F</section>
     <script src="src/index.js"></script>
